--- a/uploads/login.html
+++ b/uploads/login.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
 
-    <title>ducation_4_Ol</title>
+    <title>Blog Now</title>
   </head>
   <body>
     <div>
